# clawcounting

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.release  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  deploy-pages.yml  release.yml
docs/: book.toml  goatcounter.js
docs/src/: SUMMARY.md  introduction.md
docs/src/concepts/: currencies.md  double-entry.md  immutability.md  periods.md  subledgers.md
docs/src/getting-started/: installation.md  setup.md
docs/src/guides/: agent-integration.md  operations.md
docs/src/reference/: api.md  architecture.md  cli.md  errors.md
frontend/: .gitignore  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
frontend/src/: app.html
frontend/src/lib/: api.ts  csv.ts
frontend/src/lib/data/: native-cryptos.json
frontend/src/lib/stores/: auth.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/accounts/: +page.svelte
frontend/src/routes/currencies/: +page.svelte
frontend/src/routes/dashboard/: +page.svelte
frontend/src/routes/journal-entries/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/periods/: +page.svelte
frontend/src/routes/reports/: +page.svelte
frontend/src/routes/settings/: +page.svelte
frontend/src/routes/setup/: +page.svelte
migrations/: V1__initial_schema.sql  V2__balance_triggers.sql
skill/: SKILL.md
skill/references/: accounting-rules.md  api-reference.md  operations-guide.md  setup-guide.md
src/: app_state.rs  config.rs  error.rs  lib.rs  main.rs  openapi.rs  router.rs
src/cli/: accounts.rs  currencies.rs  journal_entries.rs  mod.rs  periods.rs  reports.rs  users.rs
src/db/: connection.rs  i128_funcs.rs  migrations.rs  mod.rs  pool.rs
src/handlers/: accounts.rs  auth.rs  currencies.rs  journal_entries.rs  mod.rs  periods.rs  reports.rs  settings.rs  users.rs
src/middleware/: auth.rs
src/models/: account.rs  amount.rs  currency.rs  journal_entry.rs  mod.rs  period.rs  report.rs  user.rs
src/services/: account_service.rs  balance_service.rs  currency_service.rs  journal_service.rs  mod.rs  period_service.rs  report_service.rs  settings_service.rs  user_service.rs
tests/: test_accounts.rs  test_auth.rs  test_currencies.rs  test_init.rs  test_journal_entries.rs  test_periods.rs  test_reports.rs
tests/common/: mod.rs
website/: index.html  style.css
(+13 files in other folders)
